# irec

./: BUILD.bazel  Makefile  README.md  bench-bw.sh  bench-latency.sh  bench-statics.sh  bench1.sh  bench2.sh  bench3.sh  end2endcheck.sh  gen_benches.sh  gen_benches_bw.sh  go.mod  go.sum  go_deps.bzl  run2.sh  run3.sh  scion.sh
algorithms/: deadbeef.wasm  selectionalgo_waopt.wasm  selectionalgo_waopt4.wasm  wasmbeacon_rust_mem.wasm
bench/: BUILD.bazel  build_native.go  build_ubpf.go  build_wa.go  build_waopt.go  config.go  main.go  main.go.bak  selection_algo.go
bench/mock/egress/: BUILD.bazel
bench/mock/egress/sqlite/: BUILD.bazel  db.go
bench/mock/ingress/: BUILD.bazel  beacon.go
bench/mock/ingress/sqlite/: BUILD.bazel  db.go  db_ubpf.go  db_wa.go  db_waopt.go  schema.go
bench_conf/: generateRacs.py
control/: BUILD.bazel  tasks.go
control/beacon/: BUILD.bazel  db.go  policy.go
control/beaconing/: BUILD.bazel  extender.go  extender_test.go  extending.go  extending_test.go  handler.go  originator.go  pathregistrar.go  pathregistrar_test.go  propagator.go  staticextension.go  staticextension_test.go  util.go
control/cmd/control/: BUILD.bazel  main.go
control/config/: config.go
control/ifstate/: ifstate.go
control/irec/egress/: BUILD.bazel  core_originator.go  core_originator_test.go  extending.go  extending_test.go  pathregistrar.go  pathregistrar_test.go  propagator.go  propagator_test.go  pullbased.go  pullbased_test.go  sender.go  staticextension.go  staticextension_test.go  util.go
control/irec/egress/mock_egress/: BUILD.bazel  mock.go
control/irec/egress/storage/: BUILD.bazel  store.go
control/irec/egress/storage/mock_egress_storage/: BUILD.bazel  mock.go
control/irec/egress/testdata/: topology-core.json
control/irec/ingress/: BUILD.bazel  handler.go  handler_test.go  ingress_server.go  ingress_server_notiming.go  ingress_server_timing.go  ingress_server_ubpf.go  ingress_server_ubpf_timing.go  ingress_server_wa.go  ingress_server_wa_timing.go  ingress_server_waopt.go  ingress_server_waopt_timing.go  legacy_ingress.go  pathwriter.go  racjob.go
control/irec/ingress/storage/: BUILD.bazel  store_ubpf.go  store_wa.go  store_waopt.go
control/irec/racjob/: BUILD.bazel  racjob.go
control/segreq/: BUILD.bazel  authoritative.go  expander.go  fetcher.go  forwarder.go  splitter.go
control/segutil/: router.go
daemon/: daemon.go
daemon/cmd/daemon/: main.go
daemon/fetcher/: fetcher.go
daemon/internal/servers/: BUILD.bazel  grpc.go
docker/: BUILD.bazel  endhost.bzl  scion_app_kathara.bzl  tester_snapshots.yaml
pkg/daemon/: apitypes.go  daemon.go  grpc.go
pkg/experimental/hiddenpath/: beaconwriter.go
pkg/grpc/: dialer.go
pkg/irec/: BUILD.bazel  irec_lib.c  irec_lib.h  irec_vm_fns.c  irec_vm_fns.h  memory.c  memory.h
pkg/irec/includes/flatbuffers-go/irec/: ASEntry.go  BUILD.bazel  BandwidthInfo.go  Beacon.go  BeaconBytesWrapper.go  Execution.go  GeoCoordinates.go  HiddenPathExt.go  HopField.go  Interface.go  IrecExt.go  LatencyInfo.go  MapEntryUlongUint.go  MapEntryUlongUlong.go  PeerEntry.go  SignedExtensions.go  StaticInfoExt.go  UnsignedExtensions.go
pkg/irec/includes/irec/: BUILD.bazel  irec_vm.h  shared.h  tools.h
pkg/irec/includes/irec_fbs/: irec_builder.h  irec_reader.h  irec_verifier.h
pkg/irec/libs/memalloc/: BUILD.bazel  Makefile
pkg/irec/libs/memalloc/ptmalloc3/: BUILD.bazel  Makefile  malloc-private.h
pkg/irec/libs/tommyds/: BUILD.bazel
pkg/irec/libs/tommyds/tommyds/: BUILD.bazel  tommy.c
pkg/irec/libs/ubpf_vm/: BUILD.bazel  CMakeLists.txt  ubpf_int.h  ubpf_jit_x86_64.c  ubpf_loader.c  ubpf_vm.c
pkg/irec/libs/ubpf_vm/inc/: context.h  ubpf.h
pkg/private/xtest/graph/: BUILD.bazel  graph.go
pkg/proto/control_plane/: irec.pb.go  seg.pb.go  seg_extensions.pb.go
pkg/proto/daemon/: daemon.pb.go
pkg/proto/rac/: rac.pb.go
pkg/segment/: BUILD.bazel  meta.go  seg.go
pkg/segment/extensions/irec/: BUILD.bazel  irec.go
private/path/combinator/: combinator.go  combinator_test.go  graph.go  staticinfo_accumulator.go  staticinfo_accumulator_test.go
private/pathdb/query/: query.go
private/periodic/: BUILD.bazel  tick.go
private/procperf/: procperf.go
private/segment/segfetcher/: pather.go  request.go  requester_test.go  resolver.go  splitter.go  splitter_test.go
private/segment/segfetcher/mock_segfetcher/: mock.go
private/storage/: BUILD.bazel  storage.go
private/storage/db/: BUILD.bazel  sqlite_modernc.go
private/storage/egress/sqlite/: BUILD.bazel  db.go  schema.go
private/storage/ingress/: BUILD.bazel  beacon.go
private/storage/ingress/sqlite/: BUILD.bazel  db.go  db_ubpf.go  db_wa.go  db_waopt.go  schema.go
private/storage/path/sqlite/: BUILD.bazel  schema.go  sqlite.go
private/svc/: svc.go
private/topology/: topology.go  topology_test.go
private/topology/json/: json.go  json_test.go
private/topology/testdata/: basic.json
private/trust/: verifier.go
proto/control_plane/v1/: irec.proto  seg.proto  seg_extensions.proto
proto/daemon/v1/: daemon.proto
proto/rac/v1/: rac.proto
rac/: BUILD.bazel  algorithmcache.go  jobexecutor.go  writer.go
rac/cmd/rac/: BUILD.bazel  build_native.go  build_ubpf.go  build_ubpfjit.go  build_wa.go  build_waopt.go  main.go  main_notiming.go  main_timing.go
rac/config/: BUILD.bazel  config.go
rac/env/: BUILD.bazel  execenv.go
rac/env/ebpf/: BUILD.bazel  environment.go  environment_timing.go
rac/env/native/: BUILD.bazel  environment.go  environment_timing.go
rac/env/wasm/: BUILD.bazel  environment.go  environment_wa.go  environment_wa_timing.go  environment_waopt.go  environment_waopt_timing.go  util.go
scion/cmd/scion/: BUILD.bazel  main.go  pullpaths.go  showpaths.go
scion/showpaths/: showpaths.go
tools/: kctl
tools/integration/: BUILD.bazel
tools/topology/: common.py  config.py  go.py  kathara.py  supervisor.py  topo.py
topology/: default-rac-no_disp.topo  default-rac-wa-no_disp.topo  default-rac-wa.topo  default-rac-waopt.topo  default-rac.topo  tiny4-rac.topo  tiny4-wa.topo  tiny4.topo
(+1 files in other folders)
