load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "algorithmcache.go",
        "writer.go",
        "jobexecutor.go",
    ],
    importpath = "github.com/scionproto/scion/rac",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/grpc:go_default_library",
        "//pkg/proto/control_plane:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/segment:go_default_library",
        "//pkg/snet:go_default_library",
        "//rac/env:go_default_library",
        "//private/periodic:go_default_library",
        "//private/procperf:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
