load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "racjob.go",
    ],
    importpath = "github.com/scionproto/scion/control/irec/racjob",
    visibility = ["//visibility:public"],
    deps = [
        "//control/beacon:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/log:go_default_library",
        "@com_github_google_flatbuffers//go:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
