load("//tools/lint:go.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = [
        "build_ubpfjit.go",
        "main.go",
        "main_notiming.go",
    ],
    importpath = "github.com/scionproto/scion/rac/cmd/rac",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/grpc:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/proto/control_plane:go_default_library",
        "//private/app:go_default_library",
        "//private/app/launcher:go_default_library",
        "//private/topology:go_default_library",
        "//rac:go_default_library",
        "//rac/config:go_default_library",
        "//rac/env:go_default_library",
        "//rac/env/ebpf:go_default_library",
        "//rac/env/native:go_default_library",
        "//rac/env/wasm:go_default_library",
        "@org_golang_google_grpc//resolver:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

scion_go_binary(
    name = "rac",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
