load("//tools/lint:go.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "gomock")

gomock(
    name = "go_default_mock",
    out = "mock.go",
    interfaces = [
        #        "BeaconInserter",
        #        "BeaconProvider",
        "Sender",
        "RPC",
        "Writer",
        #        "SegmentProvider",
        "SegmentStore",
        "SenderFactory",
    ],
    library = "//control/irec/egress:go_default_library",
    package = "mock_egress",
)

go_library(
    name = "go_default_library",
    srcs = ["mock.go"],
    importpath = "github.com/scionproto/scion/control/irec/egress/mock_egress",
    visibility = ["//visibility:public"],
    deps = [
        "//control/beacon:go_default_library",
        "//control/irec/egress:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/segment:go_default_library",
        "//private/segment/seghandler:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
