load("//tools/lint:go.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "gomock")

go_library(
    name = "go_default_library",
    srcs = ["store.go"],
    importpath = "github.com/scionproto/scion/control/irec/egress/storage",
    visibility = ["//visibility:public"],
    deps = ["//control/ifstate:go_default_library"],
)
