load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "store_ubpf.go",
        "store_wa.go",
        "store_waopt.go",
    ],
    importpath = "github.com/scionproto/scion/control/irec/ingress/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//control/beacon:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/segment:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/proto/control_plane:go_default_library",
        "//private/storage/ingress:go_default_library",
    ],
)
