cc_library(
    name = "memalloc",
    srcs = [
        "michelfralloc.c",
        "sbrk.c",
        "//pkg/irec/libs/memalloc/ptmalloc3:srcs",
    ],
    hdrs = [
        "michelfralloc.h",
        "sbrk.h",
        "sbrk-public.h",
        "//pkg/irec/libs/memalloc/ptmalloc3:hdrs",
    ],
    copts = [
        "-c",
        "-g",
        "-O3",
        "-march=native",
        "-mtune=native",
        "-Wall",
        "-Wstrict-prototypes",
        "-DUSE_TSD_DATA_HACK",
        "-D_REENTRANT",
        "-Isysdeps/generic",
        "-I.",
        "-include sbrk.h",
        "-DTHREAD_STATS=1",
        "-DHAVE_MMAP=0",
        "-DHAVE_MORECORE=1",
        "-DMORECORE=context_sbrk",
        "-DMSPACES=0",
        "-DUSE_DL_PREFIX=1",
        "-DUSE_LOCKS=0",
        "-fPIC",
    ],
    defines = ["USE_DL_PREFIX=1"],
    includes = ["./"],
    visibility = ["//visibility:public"],
)
