load("//tools/lint:go.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "gomock")

gomock(
    name = "go_default_mock",
    out = "mock.go",
    interfaces = [
        "EgressDB",
    ],
    library = "//control/irec/egress/storage:go_default_library",
    package = "mock_egress_storage",
)

go_library(
    name = "go_default_library",
    srcs = ["mock.go"],
    importpath = "github.com/scionproto/scion/control/irec/egress/storage/mock_egress_storage",
    visibility = ["//visibility:public"],
    deps = [
        "//control/ifstate:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
